rename to web3auth build (#1)
* rename to web3auth build

* Added sample code for using custom verifiers.

Co-authored-by: hugtor <hugh@tor.us>

Hugh: Yes tested to work with Windows, Android, iOS

--- a/Assets/Plugins/Web3AuthSDK/Editor/CreateDeepLink.uxml
+++ b/Assets/Plugins/Web3AuthSDK/Editor/CreateDeepLink.uxml
@@ -7,7 +7,7 @@
 >
     <engine:VisualElement name="container">
         <engine:Label text="Enter the redirect uri" name="title" />
-        <engine:TextField name="uri" text="torusapp://com.torus.Web3AuthUnity/auth"/>
+        <engine:TextField name="uri" text="torusapp://org.torusresearch.web3authunity/auth"/>
         <engine:Button text="Generate" name="generateButton"/>
     </engine:VisualElement>
 </engine:UXML>
